added brand name support, optimized url for all links

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
+BRAND_NAME="Origin CMS"
+BRAND_ABBR="OC"
 
 DB_HOST=localhost
 DB_DATABASE=homestead
